<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.supervisor.RegisterUserFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible"/>

        <RelativeLayout
            android:id="@+id/register_form_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">


            <EditText
                android:id="@+id/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/f_last_name_hint"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/last_name"
                android:ems="10"
                android:hint="@string/f_first_name_hint"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/second_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_name"
                android:ems="10"
                android:hint="@string/f_second_name_hint"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_name"
                android:ems="10"
                android:hint="@string/f_email_hint"
                android:inputType="textEmailAddress"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/email"
                android:ems="10"
                android:hint="@string/f_password_hint"
                android:inputType="textPersonName"
                android:textSize="14sp"
                tools:ignore="TextFields" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/password"
                android:ems="10"
                android:hint="@string/f_phone_hint"
                android:inputType="phone"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/iin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/phone"
                android:ems="10"
                android:hint="@string/f_iin_hint"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iin"
                android:clickable="false"
                android:cursorVisible="false"
                android:ems="10"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:hint="@string/f_birthday_hint"
                android:inputType="date"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/birthday"
                android:ems="10"
                android:hint="@string/f_address_hint"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_alignParentStart="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_red"
                android:text="@string/reg_cancel_button" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/address"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="15dp"
                android:backgroundTint="@color/dark_green"
                android:text="@string/reg_submit_button" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>