<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.supervisor.SupervisorMainFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toTopOf="@id/buttons_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <ProgressBar
            android:id="@+id/user_info_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible" />

        <RelativeLayout
            android:id="@+id/user_info_card_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/info_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/info_username"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/info_username_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_iin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_username_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_iin"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_iin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_username_label"
                android:layout_toEndOf="@id/info_iin_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_iin_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_email"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_iin_label"
                android:layout_toEndOf="@id/info_email_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_email_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_email_label"
                android:layout_toEndOf="@id/info_phone_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_phone_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_birthday"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_phone_label"
                android:layout_toEndOf="@id/info_birthday_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_birthday_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_birthday_label"
                android:layout_toEndOf="@id/info_address_label"
                android:textColor="@color/black" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/buttons_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/buttons_card_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/introduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/m_user_info_introduction"
                android:textColor="@color/black" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/introduction"
                android:layout_marginVertical="10dp"
                android:background="@android:color/darker_gray" />

            <Button
                android:id="@+id/orders_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider"
                android:layout_centerInParent="true"
                android:text="@string/s_reports_button"
                android:backgroundTint="@color/dark_green"/>

            <Button
                android:id="@+id/register_users_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/orders_button"
                android:layout_centerInParent="true"
                android:text="@string/s_register_user"/>


            <Button
                android:id="@+id/logout_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_users_button"
                android:layout_centerInParent="true"
                android:text="@string/m_logout_button"
                android:backgroundTint="@color/dark_red"/>

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>