<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.supervisor.MemberReportsFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/user_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:id="@+id/user_info_card_body"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/info_username_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/info_username"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/info_username_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_iin_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_username_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_iin"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_iin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_username_label"
                android:layout_toEndOf="@id/info_iin_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_email_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_iin_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_email"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_iin_label"
                android:layout_toEndOf="@id/info_email_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_phone_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_email_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_phone"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_email_label"
                android:layout_toEndOf="@id/info_phone_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_birthday_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_phone_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_birthday"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_phone_label"
                android:layout_toEndOf="@id/info_birthday_label"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/info_address_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_birthday_label"
                android:layout_marginEnd="5dp"
                android:text="@string/info_address"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/info_birthday_label"
                android:layout_toEndOf="@id/info_address_label"
                android:textColor="@color/black" />

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/loading_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_info_card" />

    <LinearLayout
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/user_info_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/member_reports"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="18sp"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/reports"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintBottom_toTopOf="@id/buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:listitem="@layout/report_element" />

    <RelativeLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/back_to_main_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_red"
            android:text="@string/rep_cancel_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>